--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 <body>
     <div id ="main-page">
         <div id = "window"> 
+            <!--
             <img src="./img/left.png" alt="">
             <img src="./img/right.png" alt="">
             <img src="./img/cancel.png" alt="">
             <img src="./img/house.png" alt="">
+        -->
+            <img src="\img\mario\banana.png" alt="">
+            <img src="\img\mario\bubble.png" alt="">
+            <img src="\img\mario\bullet.png" alt="">
+            <img src="\img\mario\egg.png" alt="">
+            <img src="\img\mario\horn.png" alt="">
+            <img src="\img\mario\random.png" alt="">
         </div>
     </div>
 </body>
